--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="home__data">
                 <h1 class="home__title">AKASH SATPUTE</h1>
                 <h2 class="home__subtitle">Machine Learning <span style="color: #1d4ed8;">|</span> Deep Learning <span style="color: #1d4ed8;">|</span> NLP</h2>
-                <a target="_blank" href="https://drive.google.com/file/d/1ZVGfT4SkYeIWsoZvaoyqot8GBgNYjIwE/view?usp=sharing" class="home__button">Resume</a>
+                <a target="_blank" href="https://www.canva.com/design/DAGWbFgdsfk/71k5lPfUWJgoPNKDtH9M9Q/view?utm_content=DAGWbFgdsfk&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hec1bffbab3" class="home__button">Resume</a>
             </div>
 
             <div class="home__social">
